--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.394.0",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3",
     "next": "14.2.4",
+    "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
